--- a/themes/wordyintrovert/home.html
+++ b/themes/wordyintrovert/home.html
@@ -15,7 +15,7 @@
 					<span class="logo-the">THE</span> <span class="logo-wordy">WORDY</span><br/>
 					<span class="logo-introvert">INTROVERT</span>
 				</div>
-				<img src="images/chat.png" alt="Wordy Introvert Logo">
+				<img src="images/logo-callout@2x.png" alt="Wordy Introvert Logo"> <!-- Leave this image @2x -->
 			</a>
 		</div>
 		<nav>
@@ -45,7 +45,7 @@
 					<span class="intro-the">THE</span> <span class="intro-wordy">WORDY</span><br/>
 					<span class="intro-introvert">INTROVERT</span>
 				</div>
-				<img src="images/callout@2x.png" alt="Wordy Introvert Logo">
+				<img src="images/callout@2x.png" alt="Wordy Introvert Logo"><!-- Add some javascript to set this to the non-2x image... -->
 			</div>
 		</div>
 	</div>
